--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.1"
+    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vue": "^5.0.3",
+    "@nanostores/vue": "^0.11.0",
+    "@swup/astro": "^1.5.0",
+    "astro": "^5.1.1",
+    "lenis": "^1.1.18",
+    "nanostores": "^0.11.3",
+    "overlayscrollbars": "^2.10.1",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.17",
+    "thumbhash": "^0.1.1",
+    "vue": "^3.5.13"
   }
 }
