--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "tailwindcss": "^3.4.17",
     "thumbhash": "^0.1.1",
     "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.13",
+    "@iconify/tailwind": "^1.2.0"
   }
 }
