--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@swup/astro": "^1.5.0",
     "astro": "^5.1.1",
     "lenis": "^1.1.18",
+    "lodash": "^4.17.21",
+    "lottie-web": "^5.12.2",
     "nanostores": "^0.11.3",
     "overlayscrollbars": "^2.10.1",
     "sharp": "^0.33.5",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.13",
-    "@iconify/tailwind": "^1.2.0"
+    "@iconify/tailwind": "^1.2.0",
+    "@types/lodash": "^4.17.13"
   }
 }
